--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "@ubilabs/threejs-overlay-view": "^0.7.1",
     "next": "^13.0.6",
     "react": "18.2.0",
