--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
-// {
-//   "extends": "next/core-web-vitals",
-//   "rules": {
-//     "react/display-name": "off"
-//   }
-// }
+{
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/display-name": "off",
+    "react/no-unknown-property": "off"
+  }
+}
